<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="MemeData"
            type="com.rajit.memeology.models.Meme" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/memeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:elevation="15dp"
            app:cardBackgroundColor="@color/cardBackgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="#"
                    android:textSize="20sp"
                    android:textColor="@color/hastagColor"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/itemSubReddit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="programmingmemes"
                    android:textSize="20sp"
                    android:textColor="@color/hastagColor"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <ImageView
                    android:id="@+id/itemFavourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bookmark_temp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/itemDownload"
                    app:layout_constraintEnd_toStartOf="@+id/itemDownload"
                    app:layout_constraintTop_toTopOf="@+id/itemDownload"
                    app:tint="@color/favouriteBtnColor"
                    android:contentDescription="@string/save_to_favourites_button" />

                <ImageView
                    android:id="@+id/itemDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_download"
                    app:layout_constraintBottom_toBottomOf="@+id/itemShare"
                    app:layout_constraintEnd_toStartOf="@+id/itemShare"
                    app:layout_constraintTop_toTopOf="@+id/itemShare"
                    app:tint="@color/downloadBtnColor"
                    android:contentDescription="@string/download_button" />

                <ImageView
                    android:id="@+id/itemShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="@+id/itemAuthor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/itemSubReddit"
                    app:tint="@color/shareBtnColor"
                    android:contentDescription="@string/share_button" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="By"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/itemAuthor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="yikes45729_ko"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="@+id/itemSubReddit"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <ImageView
                    android:id="@+id/itemMemeImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitXY"
                    android:minHeight="300dp"
                    android:src="@drawable/placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itemAuthor"
                    android:contentDescription="@string/meme_image" />

                <TextView
                    android:id="@+id/itemMemeTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/placeholder_text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/itemShare"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/itemMemeImg" />

                <ImageView
                    android:id="@+id/itemLikeImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_like"
                    app:layout_constraintEnd_toEndOf="@+id/itemLike"
                    app:layout_constraintStart_toStartOf="@+id/itemLike"
                    app:layout_constraintTop_toBottomOf="@+id/itemMemeTitle"
                    app:tint="@color/purple"
                    android:contentDescription="@string/like_button" />

                <TextView
                    android:id="@+id/itemLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="125488"
                    android:textColor="@color/purple"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/itemMemeTitle"
                    app:layout_constraintTop_toBottomOf="@+id/itemLikeImg" />

                <Button
                    android:id="@+id/itemLinkToPost"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_to_post"
                    android:textColor="@color/btnTextColor"
                    app:layout_constraintBottom_toBottomOf="@+id/itemLike"
                    app:layout_constraintEnd_toEndOf="@+id/itemMemeTitle"
                    app:layout_constraintTop_toTopOf="@+id/itemLikeImg" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/shakeToNextTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shake_to_see_next_meme"
            android:textColor="@color/light_grey"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/nextBtn"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn"
            app:layout_constraintStart_toStartOf="@+id/memeLayout"
            app:layout_constraintTop_toTopOf="@+id/nextBtn" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Next"
            android:backgroundTint="@color/btnColor"
            app:layout_constraintEnd_toEndOf="@+id/memeLayout"
            app:layout_constraintTop_toBottomOf="@+id/memeLayout"
            tools:ignore="HardcodedText" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>